--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "ckeditor4": "^4.15.0",
+    "ckeditor4-react": "^1.2.0",
     "dayjs": "^1.8.11",
-    "jwt-decode": "^2.2.0",
     "react": "^16.8.4",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
@@ -28,7 +30,7 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie <= 11",
+    "ie >= 9",
     "not op_mini all"
   ],
   "proxy": "https://us-central1-fir-db-d2d47.cloudfunctions.net/api"
