--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "antd": "^4.8.0",
     "axios": "^0.18.0",
     "ckeditor4": "^4.15.0",
     "ckeditor4-react": "^1.2.0",
