--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,11 @@
 {
   "hosting": {
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
+      { "source": "/api/**", "function": "app" },
       {
-        "source": "**",
+        "source": "!/@(api)/**",
         "destination": "/index.html"
       }
     ]
