--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -13,6 +11,9 @@
 
 # firebase
 .firebase/*
+/functions/util/config.js
+/functions/*.log
+/functions/node_modules
 
 # misc
 .DS_Store
@@ -24,3 +25,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+env.sh
