add prod and testing sites

--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,28 @@
 {
-  "hosting": {
-    "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      { "source": "/api/**", "function": "app" },
-      {
-        "source": "!/@(api)/**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+  "hosting": [
+    {
+      "site": "cedars-prod",
+      "public": "production",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [
+        { "source": "/api/**", "function": "app" },
+        {
+          "source": "!/@(api)/**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
+      "site": "cedars-testing",
+      "public": "build",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [
+        { "source": "/api/**", "function": "app" },
+        {
+          "source": "!/@(api)/**",
+          "destination": "/index.html"
+        }
+      ]
+    }
+  ]
 }
