--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-functions": "^3.11.0",
     "html-react-parser": "^0.14.1",
     "http-proxy-middleware": "^1.0.5",
+    "precommit": "^1.2.2",
     "react": "^16.8.4",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.8.4",
