--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^65.0.0",
     "html-react-parser": "^0.14.1",
     "http-proxy-middleware": "^1.0.5",
+    "nodemailer": "^6.4.16",
     "react": "^16.8.4",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.8.4",
