--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dayjs": "^1.8.11",
     "firebase": "^7.21.0",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.11.0",
+    "firebase-functions": "^3.12.0",
     "html-react-parser": "^0.14.1",
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.8.4",
@@ -43,8 +43,7 @@
     "deploy-prd": "./deploy.sh prd",
     "deploy-dev": "./deploy.sh dev"
   },
-  "pre-commit": [
-  ],
+  "pre-commit": [],
   "eslintConfig": {
     "extends": "react-app"
   },
