add dev version of functions

--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,7 @@
       "public": "build",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
       "rewrites": [
-        { "source": "/api/**", "function": "app" },
+        { "source": "/api/**", "function": "devApp" },
         {
           "source": "!/@(api)/**",
           "destination": "/index.html"
