--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.4",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "antd": "^4.8.3",
     "axios": "^0.18.0",
     "busboy": "^0.3.1",
-    "ckeditor4": "^4.15.0",
-    "ckeditor4-react": "^1.2.0",
+    "ckeditor4-react": "^1.3.0",
     "cookie-parser": "^1.4.5",
     "dayjs": "^1.8.11",
-    "firebase": "^7.21.0",
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.12.0",
+    "firebase": "^8.1.2",
+    "firebase-admin": "^9.4.1",
+    "firebase-functions": "^3.13.0",
     "googleapis": "^65.0.0",
     "html-react-parser": "^0.14.1",
     "http-proxy-middleware": "^1.0.5",
@@ -24,7 +23,7 @@
     "react-dom": "^16.14.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reinstall": "^2.0.0"
