--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "busboy": "^0.3.1",
     "cookie-parser": "^1.4.5",
-    "firebase": "^7.21.0",
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.11.0",
+    "firebase": "^8.1.2",
+    "firebase-admin": "^9.4.1",
+    "firebase-functions": "^3.13.0",
+    "googleapis": "^66.0.0",
     "http-proxy-middleware": "^1.0.5",
+    "nodemailer": "^6.4.16",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
