--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.8.4",
     "react-app-polyfill": "^1.0.6",
-    "react-dom": "^16.14.0",
+    "react-dom": "16.13.0",
     "react-redux": "^6.0.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "5.1.0",
     "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
