--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dayjs": "^1.8.11",
     "html-react-parser": "^0.14.1",
     "http-proxy-middleware": "^1.0.5",
-    "react": "^16.8.4",
+    "react": "16.13.0",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "16.13.0",
     "react-redux": "^6.0.1",
