--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 /functions/util/config.js
 /functions/*.log
 /functions/node_modules
-*/firebase-debug.log
+*firebase-debug.log
 # misc
 .DS_Store
 .env.local
