--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reinstall": "^2.0.0",
-    "sharp": "^0.26.3"
+    "reinstall": "^2.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0",
